home-work-3 fix for comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="step_1">Духовку разогреть до 200°. Палочку ванили разрезать вдоль пополам и ножом соскребсти семена из обеих образованных половинок.</string>
     <string name="step_2">Молоко,ваниль и 40 г сах.пудры довести до кипения,снять с огня,накрыть крышкой и дать настояться 20 мин.</string>
     <string name="registration">Регистрация</string>
+    <string name="message_about_wrong_password">Указаное имя меньше %1$s символов!</string>
+    <string name="message_about_wrong_name">Указанный пароль меньше %1$s символов!</string>
+    <string name="message_about_wrong_email">Указанный email должен быть больше %1$s символов и иметь @</string>
 </resources>
