[home work 4]: fix problems with a translate

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -77,4 +77,5 @@
     <string name="blueberry_muffins" translatable="false">Blueberry muffins</string>
     <string name="glazed_salmon" translatable="false">Glazed salmon</string>
     <string name="french_toasts_with_strawberries">French toasts with strawberries</string>
+    <string name="recommend_title">Recommend</string>
 </resources>
