--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,9 +35,8 @@
     <string name="question_about_what_will_you_cook">Что будете готовить сегодня?</string>
     <string name="hello">Здраствуйте, User!</string>
     <string name="_10_minutes">10 минут</string>
-    <string name="minutes">минут</string>
     <string name="_500_calories">500 калорий</string>
-    <string name="calories">калорий</string>
+
     <string name="step_1">Духовку разогреть до 200°. Палочку ванили разрезать вдоль пополам и ножом соскребсти семена из обеих образованных половинок.</string>
     <string name="step_2">Молоко,ваниль и 40 г сах.пудры довести до кипения,снять с огня,накрыть крышкой и дать настояться 20 мин.</string>
     <string name="registration">Регистрация</string>
@@ -79,6 +78,15 @@
         <item quantity="few">%1$d символа!</item>
         <item quantity="many">%1$d символов!</item>
         <item quantity="other">%1$d символов!</item>
+    </plurals>
+
+    <plurals name="minutes">
+        <item quantity="one">%d минута</item>
+        <item quantity="other">%d минут</item>
+    </plurals>
+    <plurals name="calories">
+        <item quantity="one">%d калория</item>
+        <item quantity="other">%d калориит</item>
     </plurals>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
