--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,7 +61,7 @@
     <string name="_1portion">1 portion</string>
     <string name="_135cal">135 calories</string>
     <string name="_15min">15min</string>
-    <string name="lunch">Dinner</string>
+    <string name="lunch">Lunch</string>
     <string name="_280cal">280 calories</string>
     <string name="_45min">45min</string>
     <string name="filter">Filter</string>
